fix wrapping issues

--- a/frontend/src/components/http_cycle_viewer/stylesheet.styl
+++ b/frontend/src/components/http_cycle_viewer/stylesheet.styl
@@ -1,12 +1,12 @@
 @import '~src/vars'
 
 .root
-  // height: 95%
-  margin: 10px
+  height: 100%
   display: block
+  overflow: auto
+  margin: 10px
 
 .flex-area
-  height: 100%
   display: flex // or maybe inline-flex
   flex-flow: row wrap
   justify-content: flex-start
